<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wormhole_navigator</name>
  <version>0.0.0</version>
  <description>Wormhole-based multi-map navigation system</description>

  <maintainer email="ellakiyaarun@gmail.com">ellakiya</maintainer>
  <license>Apache-2.0</license> <!-- or BSD-3, MIT, etc. Pick one -->

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>wormhole_interfaces</depend>

  <!-- System dependency for SQLite -->
  <exec_depend>libsqlite3-dev</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
